force-app/main/default/objects/sugati__Flight_Service_Setting__c/sugati__Flight_Service_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Flight Service Setting</label>
</CustomObject>