force-app/main/default/objects/sugati__Flight_Service_Setting__c/fields/sugati__Active__c.field-meta.xml
<CustomField>
    <fullName>sugati__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>