force-app/main/default/objects/sugati__Flight_Service_Setting__c/fields/sugati__API_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>sugati__API_Endpoint__c</fullName>
    <defaultValue>&apos;https://api.flightstats.com&apos;</defaultValue>
    <label>API Endpoint</label>
    <required>true</required>
    <type>Url</type>
</CustomField>