force-app/main/default/objects/sugati__Flight_Service_Setting__c/fields/sugati__Enabled_Flight_Alert__c.field-meta.xml
<CustomField>
    <fullName>sugati__Enabled_Flight_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enabled Flight Alert</label>
    <type>Checkbox</type>
</CustomField>