force-app/main/default/objects/sugati__Flight_Service_Setting__c/fields/sugati__Flight_Alert_Webhook_Url__c.field-meta.xml
<CustomField>
    <fullName>sugati__Flight_Alert_Webhook_Url__c</fullName>
    <label>Flight Alert Webhook Url</label>
    <type>Url</type>
</CustomField>