force-app/main/default/objects/sugati__Flight_Service_Setting__c/fields/sugati__Flight_Components__c.field-meta.xml
<CustomField>
    <fullName>sugati__Flight_Components__c</fullName>
    <defaultValue>&apos;Int Flight,Dom Flights&apos;</defaultValue>
    <label>Flight Components</label>
    <length>255</length>
    <type>Text</type>
</CustomField>